--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,9 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: root
+  redis:
+    host: 192.168.237.128
+    port: 6379
 
 mybatis:
   mapper-locations: classpath*:mapper/*Mapper.xml
