1.测试jdbc fetchSize 2.测试 redis

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,7 @@ spring:
 
 mybatis:
   mapper-locations: classpath*:mapper/*Mapper.xml
+
+logging:
+  level:
+    com.liujunlong.dao*: debug  # mybatis 打印sql
